--- a/diffusion_policy_vision_pusht_demo.ipynb
+++ b/diffusion_policy_vision_pusht_demo.ipynb
@@ -1813,11 +1813,13 @@
         "        start = obs_horizon - 1\n",
         "        end = start + action_horizon\n",
         "        action = action_pred[start:end,:]\n",
+        "        print(\"action: \",action)\n",
         "        # (action_horizon, action_dim)\n",
         "\n",
         "        # execute action_horizon number of steps\n",
         "        # without replanning\n",
         "        for i in range(len(action)):\n",
+        "            print(\"Iteration, Action: \", i, action[i])\n",
         "            # stepping env\n",
         "            obs, reward, done, _, info = env.step(action[i])\n",
         "            # save observations\n",
